<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.littleblue.autopacket.MainActivity">

    <RelativeLayout
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginTop="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/relativeLayout">

        <Button
            android:text="@string/start_service"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/button_start"
            android:elevation="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/blue_light"
            android:textSize="30dp"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <com.littleblue.autopacket.OvalView
            android:id="@+id/oval_view"
            android:alpha="0.45"
            android:foregroundGravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="3dp"
            android:layout_width="106dp"
            android:layout_height="60dp"
            app:oval_color="@color/glass_grey"
            app:angle_ratio="2"/>

    </RelativeLayout>

    <Button
        android:text="@string/help_and_about"
        android:layout_height="70dp"
        android:id="@+id/button_about"
        android:textColor="@color/blue_light"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="200dp"
        android:textSize="16dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/help_and_about_text"
        android:layout_height="wrap_content"
        android:id="@+id/button_about_text"
        android:textColor="@color/blue_light"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:gravity="left"
        android:textSize="10dp"
        android:textAllCaps="false"
        android:alpha="0"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/editText_weixin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/weixin_name_edit_hint"
        android:textColorHint="@color/hint_color"
        android:textStyle="bold"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:textColor="@color/blue_light"
        android:background="@null"
        android:textCursorDrawable="@null"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:text="@string/weixin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@color/blue_light"
        android:textSize="15dp"
        android:alpha="0.6"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_weixin_name"
        android:gravity="center"
        android:visibility="invisible"
        android:alpha="0"
        android:id="@+id/relativeLayout_ok">

        <Button
            android:text="@string/save"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/button_ok"
            android:elevation="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/blue_light"
            android:textSize="15dp"
            android:enabled="false"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <com.littleblue.autopacket.OvalView
            android:alpha="0.45"
            android:foregroundGravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="3dp"
            android:layout_width="94dp"
            android:layout_height="30dp"
            app:oval_color="@color/glass_grey"
            app:angle_ratio="2"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/relativeLayout_ok"
        android:gravity="center" >

        <Button
            android:text="@string/wannot_group_man"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/button_wannot_group_man"
            android:elevation="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/blue_light"
            android:textSize="26dp"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <com.littleblue.autopacket.OvalView
            android:alpha="0.45"
            android:foregroundGravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="3dp"
            android:layout_width="115dp"
            android:layout_height="60dp"
            app:oval_color="@color/glass_grey"
            app:angle_ratio="2"/>

    </RelativeLayout>

</RelativeLayout>
